[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mycmdb"
version = "0.0.1"
authors = [
  { name="Ramón Gil Moreno", email="ramongilmoreno@gmail.com" },
]
description = "Simple small personal CMDB for everyone"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = [ "LICENSE.txt" ]
dependencies = [
  "jinja2"
]

[project.urls]
Homepage = "https://github.com/ramongilmoreno/mycmdb"
Issues = "https://github.com/ramongilmoreno/mycmdb/issues"

[tool.hatch.build.targets.sdist]
exclude = [
  '/.gitignore'
]

[tool.hatch.build.targets.wheel]
packages = [ "mycmdb" ]

